Refactoring tried to fix plot, but failed.